--- a/manifest.json
+++ b/manifest.json
@@ -9,5 +9,5 @@
   "action": {
     "default_popup": "popup.html"
   },
- "permissions": ["activeTab","alarms","scripting","tabs","webNavigation"]
+ "permissions": ["activeTab","alarms","scripting","tabs","storage"]
 }
